tests/invalid/ListSublist_Invalid_1.whiley
method main() -> [int]:
    real end = 1.2344
    [int] list = [1, 2, 3]
    return list[-1..end]
